--- a/lost.html
+++ b/lost.html
@@ -1,3 +1,12 @@
 <h1>You lost</h1>
 
-<a href=  "https://defendio.herokuapp.com/">Play again</a>
+<a href=  "https://defend.infiputer.repl.co">Play again</a>
+
+
+<br>
+
+
+<audio controls autoplay>
+  <source src="sounds/rickroll.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
