you lost screen redireects back to home

--- a/lost.html
+++ b/lost.html
@@ -1,6 +1,6 @@
 <h1>You lost</h1>
 
-<a href=  "https://defend.infiputer.repl.co">Play again</a>
+<a href=  "http://defendio.herokuapp.com/">Play again</a>
 
 
 <br>
