--- a/lost.html
+++ b/lost.html
@@ -1,12 +1,7 @@
+<title>You Lost</title>
 <h1>You lost</h1>
-
+<link rel="stylesheet" type="text/css" href="../index.css" media="screen" />
+<body>
 <a href=  "http://defendio.herokuapp.com/">Play again</a>
+</body>
 
-
-<br>
-
-
-<audio controls autoplay>
-  <source src="sounds/rickroll.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
