--- a/lost.html
+++ b/lost.html
@@ -1,8 +1,7 @@
 <title>You Lost</title>
+<center>
 <h1>You lost</h1>
 <link rel="stylesheet" type="text/css" href="../index.css" media="screen" />
-<body><center>
 <a href=  "http://defendio.herokuapp.com/">Play again</a>
 </center>
-</body>
 
